--- a/style.css
+++ b/style.css
@@ -2,5 +2,8 @@
   display: flex;
   flex-direction: column;
   gap: 0.5em;
-  margin-bottom: 0.5em;
+  margin-bottom: 0.75em;
+}
+textarea {
+  height: 10em;
 }
